--- a/Cours_python/Groupe_10_projet1_crypto_SALIOU.ipynb
+++ b/Cours_python/Groupe_10_projet1_crypto_SALIOU.ipynb
@@ -2,6 +2,12 @@
  "cells": [
   {
    "cell_type": "markdown",
+      "metadata": {},
+   "source": [
+    ">> # Noms des exposants \n",
+    "> - **Diégane Faye**\n",
+    "> - **Saliou Seck**\n"
+   ]
    "metadata": {}
   },
   {
